# termstat

./: Cargo.toml  README.md  flake.nix  test.sh
.github/workflows/: rust.yml
init/: termstat.zsh
nix/: module.nix
src/: cli.rs  main.rs  print_stats.rs  queries.rs  sqlite.rs  table.rs
src/init/: termstat.bash  termstat.zsh
src/util/: duration.rs  mod.rs  redact.rs
