[package]
name = "termstat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "=6.2.0"
